--- a/PW/math-kidz/styles/globals.css
+++ b/PW/math-kidz/styles/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+  background-color: rgba(218, 237, 245, 0.767);
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
