--- a/PW/math-kidz/styles/globals.css
+++ b/PW/math-kidz/styles/globals.css
@@ -6,7 +6,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
+div {
+  background-color: rgba(218, 237, 245, 0.767);
+}
 a {
   color: inherit;
   text-decoration: none;
