--- a/PW/math-kidz/components/navbar.module.scss
+++ b/PW/math-kidz/components/navbar.module.scss
@@ -1,26 +1,26 @@
 .container {
-    display: flex;
-  
-    justify-content: space-between;
-  
-    position: sticky;
-    position: -webkit-sticky;
-  
-    top: 0;
-  
+  display: flex;
+
+  justify-content: space-between;
+
+  position: sticky;
+  position: -webkit-sticky;
+
+  top: 0;
+
+  color: white;
+  background-color: black;
+}
+
+.span {
+  padding: 5px 10px;
+  margin: 5px;
+
+  font-size: large;
+  font-weight: bold;
+
+  a {
     color: white;
-    background-color: black;
+    margin-left: 2rem;
   }
-  
-  .span {
-    padding: 5px 10px;
-    margin: 5px;
-  
-    font-size: large;
-    font-weight: bold;
-  
-    a {
-      margin-left: 2rem;
-    }
-  }
-  
+}
