--- a/PW/math-kidz/styles/globals.css
+++ b/PW/math-kidz/styles/globals.css
@@ -14,6 +14,9 @@ a {
   text-decoration: none;
 }
 
-* {
+*, *::before, *::after {
   box-sizing: border-box;
+  font-family: Gotham Rounded;
+  font-size: 17px;
 }
+
