--- a/PW/math-kidz/components/quiz.module.scss
+++ b/PW/math-kidz/components/quiz.module.scss
@@ -1,17 +1,19 @@
-
-
 $hue-neutral: 200;
 $hue-wrong: 0;
 $hue-correct: 145;
 
+.body {
+	$hue: $hue-neutral;
+	padding: 0;
+	margin: 0;
+	display: flex;
+	width: 100vw;
+	height: 100vh;
+	justify-content: center;
+	align-items: center;
+	background-color: hsl($hue, 100%, 20%);
+}
 
-.body{
-    padding: 0;
-    margin: 0;
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    background-color: hsl($hue-neutral, 100%, 20%);
+.body.correct {
+	$hue: $hue-correct;
 }
